--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div>
         <h2>Here is a simple text website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum temporibus veritatis dignissimos alias possimus, obcaecati delectus fugit neque perspiciatis dolor explicabo inventore odit illum cumque, quisquam eos maiores mollitia! Doloremque.</p>
+        <button>Click me!</button>
     </div>
 </body>
 </html>
