--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
         <h2>Here is a simple text website</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum temporibus veritatis dignissimos alias possimus, obcaecati delectus fugit neque perspiciatis dolor explicabo inventore odit illum cumque, quisquam eos maiores mollitia! Doloremque.</p>
         <button>Click me!</button>
+        <h3>Color list</h3>
+        <ul>
+            <li>Red</li>
+            <li>Blue</li>
+            <li>Green</li>
+        </ul>
     </div>
 </body>
 </html>
